--- a/src/css/main.css
+++ b/src/css/main.css
@@ -110,8 +110,9 @@
   background: rgba(31, 31, 31, 0.505);
   backdrop-filter: blur(5px);
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
   padding-left: 30px;
   opacity: 0;
   transition: opacity 0.5s ease;
@@ -130,6 +131,19 @@
   font-family: "Gabarito", sans-serif;
 }
 
+.card-title-secondary {
+  color: white;
+  font-size: 11px;
+  font-weight: normal;
+
+  text-align: left;
+  transform: translateY(100px);
+  opacity: 0;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  font-family: "Gabarito", sans-serif;
+  margin-top: 10px;
+}
+
 .card-content:hover {
   box-shadow: 0 15px 40px rgba(0, 0, 0, 0.4);
 }
@@ -142,6 +156,12 @@
   transform: translateY(0);
   opacity: 1;
   transition-delay: 0.1s;
+}
+
+.card-content:hover .card-title-secondary {
+  transform: translateY(0);
+  opacity: 1;
+  transition-delay: 0.2s;
 }
 
 /* Filter Animation Styles */
