--- a/src/css/input.css
+++ b/src/css/input.css
@@ -6,6 +6,7 @@
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 .inter-lumos {
@@ -13,6 +14,7 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 .montserrat-lumos {
@@ -20,6 +22,7 @@
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 /* Loading Screen Styles */
